projects/vb6parse/snapshots/syntax/statements/objects/events/raiseevent_statement_at_module_level.snap
---
source: projects/vb6parse/src/syntax/statements/objects/events.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: RaiseEventStatement
      children:
        - kind: RaiseEventKeyword
          text: RaiseEvent
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: GlobalEvent
        - kind: Newline
          text: "\n"
